# bfg_unpacker

./: FAQ.txt  README.md  bfg_unpacker.7z  build.bat  build.spec  build_run.bat  date_parser_stop_game.py  favorites.ini  game_list.ods  game_list.txt  itch.io_game_list_parser.py  link.txt  list.txt  main.bat  main.py  pyproject.toml  readme2.odt  readme2.rtf  requirements.txt  run.bat  runner.py  setting.ini  test.py  thread_party.txt  todo.docx  unpacker.au3  whats new.txt  whats_new.txt  ссылки.txt  установка.txt
data/: material.css.template  rename.bat  wav_formats.txt
data/AssetStudio/: AssetStudioCLI.deps.json  AssetStudioCLI.dll.config  Keys.json  log.txt
data/QuickBMS/: changelog.txt  comtype_scan2.bat  (+9 more)
dev_tools/: igromania_parser2.py  itch.io_game_list_parser.py  stop_game_parser2.py  stopgame_parser2.py  table_creator.py
game_list/: archives_list.csv  game_list.db3  gamemaker_list.csv  godot_list.csv  main_list.csv  renpy_list.csv  rpgmaker_list.csv  unity_list.csv  unreal_list.csv
python/: date_parser_stop_game.py  exo.py  itch.io_game_list_parser.py  rdr2audio.py  tocs_book.py  tocs_book2dat.py
qt_material/: __init__.py  dock_theme.ui  hook-qt_material.py  material.css.template
readme/: readme3.docx  readme3.odt
source/: change_button_menu.py  delete.py  general.py  qprocess.py  quick_open.py  reaper.py  select_out.py  setting.py  theme_creator.py  unpacker.py
src/: ArrayPlus.au3  engines.au3  ext_gui.au3  local.au3  main.au3  menu.au3  program.au3  quickopen.au3  quickopen_back.au3
tests/: autocomplete.py  drag_n_drop.py  multifale.py
(+3299 files in other folders)
